--- a/src/app/navbar/sidenav/sidenav.component.html
+++ b/src/app/navbar/sidenav/sidenav.component.html
@@ -2,7 +2,8 @@
   <nav class="navbar col-12" style="position: fixed;
   width: 100%;
   z-index: 1000;">
-    <div (click)="refreshPage()" class="logo cursor-pointer"><img src="assets/medstream.svg" style="width: 12rem;"
+   <!-- style="width: 12rem;" -->
+    <div (click)="refreshPage()" class="logo cursor-pointer"><img src="assets/medstream.svg" width="190"
         alt="Medstream 360 logo" /></div>
 
     <ul class="nav-links">
