landing image with low resolution

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
        fetchpriority="high"
        width="100%"> -->
 
-      <img class="col-12 cur_pointer" routerLink='/user/schedule' [defaultImage]="defaultImage" [lazyLoad]="image"
+      <img class="col-12 cur_pointer landing_img" routerLink='/user/schedule' [defaultImage]="defaultImage" [lazyLoad]="image"
         alt="medstream landing image" width="100%">
 
       <div class="getStartedCont">
