--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -48,6 +48,9 @@
   .get_started{
     margin-bottom: 40px;
     position: relative;
+    .landing_img{
+      border-radius: 25px;
+    }
     // height: 85vh;
     .getStartedCont{
       position: absolute;
