aspect ratio for images

--- a/src/app/home/home-carousel/home-carousel.component.html
+++ b/src/app/home/home-carousel/home-carousel.component.html
@@ -4,7 +4,7 @@
       <ng-container *ngIf="currentIndex==i">
         <!-- role="listbox" -->
         <div class="col-12 carousel-inner" (click)="enrouteCase(list)">
-          <img class="col-7 responsive mb-2" src="{{ list.thumbnail}}" alt="slide" >
+          <img aspectratio="2:1" class="col-7 responsive mb-2" src="{{ list.thumbnail}}" alt="slide" >
           <div class="col-5 responsive_txt ml-3">
             <h5 class="red_text cursor-pointer" >CASE OF THE WEEK - {{list.weekNo}}{{list.weekNo==1?'st':list.weekNo==2?'nd':list.weekNo==3?'rd':'th'}}
               {{'Week of'}} {{ list.month | titlecase }}, {{ list.year}}</h5>
@@ -15,7 +15,7 @@
               {{'Week of'}} {{ list.month | titlecase }}, {{ list.year}}</p>
             <div class="mt-5" style="display: flex;" >
                 <!-- <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p> -->
-                <img [src]="list.institution.image"  style="border-radius: 50%;width: 50px; height: 50px;" alt="">
+                <img height="100" width="100" [src]="list.institution.image"  style="border-radius: 50%;width: 50px; height: 50px;" alt="">
                 <div class="ml-2"  style="display: block;" >
                   <p  style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ list.institution ? list.institution.name : 'null' }}</p>
                   <p   style="color: #FFFFFF80;;font-weight: 600;">{{list.institution ? list.institution.city: 'null' }}, {{list.institution ? list.institution.country: 'null' }} </p>
